--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,11 @@ a{
 .header .header_content ul li a:hover,.header .header_content ul li a:active{/*设置超链接滑过状态与点击状态*/
 	color: #900;
 }
+.content_main{
+	width: 998px;
+	margin: 0 auto;
+	height: 705px;
+}
 .article{
 	width: 998px;
 	height: 80px;
@@ -285,4 +290,61 @@ a{
 	height: 250px;
 	float: left;
 }
+.article .article_main .sidebar h2{
+	width: 70%;
+	height: 35px;
+	line-height: 35px;
+	float: left;
+	color: #785f55;
+	// padding-left: 20px;
+	/*若不适用 &nbsp; 进行空行 则可以使用 padding */
+}
+.article .article_main .sidebar a{
+	display: inline-block;
+	width: 30%;
+	height: 35px;
+	line-height: 35px;
+	text-align: right;
+	float: left;
+	color: #785f55;
+}
+.article .article_main .sidebar .video{
+	width: 230px;
+	border-radius: 3px;
+	overflow: hidden;
+}
+.article .article_main .sidebar img{
+	margin-top: 18px;
+	border-radius: 3px;
+}
+footer{
+	width: 100%;
+	height: 175px;
+	background-color: #e8e8e8;
+	padding-top: 50px;
+}
+.footer{
+	width: 995px;
+	height: 175px;
+	margin: 0 auto;
+}
+.footer>ul>li{
+	width: 190px;
+	border-right: 1px solid #cbcbcb;
+	line-height: 25px;
+	text-align: center;
+	font-size: 15px;
+	float: left;
+}
+.footer>ul>li>ul{
+	width: 190px;
+	line-height: 22px;
+}
+.footer>ul>li>ul li{
+	cursor: pointer;
+}
+.footer>ul>li>ul li:hover{
+	color: #f00;
+}
+
 
